--- a/app/views/units/edit.html.erb
+++ b/app/views/units/edit.html.erb
@@ -1,6 +1,6 @@
  <div class="text-end mt-3">
   <li class="d-inline-block me-3"><%= link_to '詳細', unit_path, class:"link" %></li>
-  <li class="d-inline-block me-3"><%= link_to '結果', results_path, class:"link" %></li>
+  <li class="d-inline-block me-3"><%= link_to '結果', result_path, class:"link" %></li>
   <li class="d-inline-block me-3"><%= link_to '設定', edit_path, class: "link" %></li>
 </div>
 
