--- a/app/assets/stylesheets/units.scss
+++ b/app/assets/stylesheets/units.scss
@@ -42,3 +42,9 @@ margin-bottom: 10px;
     margin-top: 300px;
     margin-left: 50px;
 }
+
+.box3{
+    margin-top: 500px;
+    margin-left: 50px;
+    margin-right: 50px;
+}
